--- a/nowinandroid/feature/module_constellate/src/main/res/layouts/fragments/layout/constellate_fortune_date_fragment.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/layouts/fragments/layout/constellate_fortune_date_fragment.xml
@@ -13,4 +13,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="820dp"
+        android:background="@drawable/constellate_comprehensive_ortune_bg"
+        app:layout_constraintTop_toBottomOf="@id/rv_constellate_date"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+
+
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
