--- a/nowinandroid/feature/module_constellate/src/main/res/values/colors.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
    <color name="constellate_tv_name_text_color">#7477F9</color>
    <color name="constellate_tab_select_text_color">#F4716E</color>
    <color name="constellate_tv_week_number_text_color">#CCCCCC</color>
+   <color name="constellate_bottom_tv_title_text_color">#333333</color>
+    <color name="constellate_bottom_tv_date_text_color">#666666</color>
   </resources>
