--- a/nowinandroid/feature/module_constellate/src/main/res/layouts/activitys/layout/constellate_fortune_activity.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/layouts/activitys/layout/constellate_fortune_activity.xml
@@ -32,6 +32,7 @@
 
 
        <androidx.core.widget.NestedScrollView
+           android:id="@+id/nest_fortune"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
